# rob-530-slam-comparison

./: README.md  docker-compose.yml
ORB_SLAM3/: .gitignore  CMakeLists.txt  Dockerfile
ORB_SLAM3/Examples/RGB-D/: rgbd_tum.cc
ORB_SLAM3/Examples/Stereo/: KITTI00-02.yaml
ORB_SLAM3/Examples/Stereo-Inertial/: DIDLM_H-B-R-D.yaml  DIDLM_H-B-R-N.yaml  DIDLM_H-B-SN-N.yaml  DIDLM_H-B-SU-D.yaml  DIDLM_L-NB-SU-N.yaml  stereo_inertial_didlm.cc
ORB_SLAM3/Examples/Stereo-Inertial/associations/: H-B-R-D.txt  H-B-R-N.txt  H-B-SN-N.txt  H-B-SU-D.txt  L-NB-SU-N.txt
ORB_SLAM3/include/: Config.h
ORB_SLAM3/src/: Settings.cc  System.cc
dropd-slam/: .gitignore  CMakeLists.txt  Dockerfile  README.md
dropd-slam/Examples/: euroc_examples.sh
dropd-slam/Examples/Monocular/: EuRoC.yaml  mono_euroc.cc  mono_kitti.cc  mono_tum.cc
dropd-slam/Examples/RGB-D/: KITTI00-02_DropD.yaml  KITTI03_DropD.yaml  KITTI04-12_DropD.yaml  TUM1.yaml  TUM2.yaml  TUM3.yaml  dropd_kitti.cc  rgbd_tum.cc
dropd-slam/include/: Config.h  DepthInference.h  Frame.h  Keynet.hpp  LoopClosing.h  ORBextractor.h  Settings.h  System.h  Tracking.h  YoloSegmentator.hpp
dropd-slam/models/: keynet.onnx  unidepthv2_with_cam.onnx  yolo11s-seg.onnx
dropd-slam/src/: DepthInference.cpp  Frame.cc  FrameDrawer.cc  KeyFrame.cc  Keynet.cpp  MapPoint.cc  ORBextractor.cc  Settings.cc  System.cc  Tracking.cc  YoloSegmentator.cpp
fast-lio-ros2/: Dockerfile  requirements.txt
fast-lio-ros2/src/FAST_LIO_ROS2/config/: avia.yaml  didlm.yaml  velodyne.yaml
fast-lio-ros2/src/FAST_LIO_ROS2/src/: laserMapping.cpp
results/DIDLM/H-B-R-D/ground_truth/: GT.txt
results/DIDLM/H-B-R-N/ground_truth/: GT.txt
results/DIDLM/H-B-SN-N/ground_truth/: GT.txt
results/DIDLM/H-B-SU-D/ground_truth/: GT.txt
results/DIDLM/L-NB-SU-N/ground_truth/: GT.txt
results/KITTI/00/DropD-SLAM/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/00/DropD-SLAM_dynamic/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/00/FAST-LIO2/: CameraTrajectory.txt  metrics.json  pos_log.txt
results/KITTI/00/ORB_SLAM3/: CameraTrajectory.txt  CameraTrajectory_tum.txt  ExecMean.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/00/ground_truth/: 00_gt_tum.txt
results/KITTI/01/DropD-SLAM/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/01/DropD-SLAM_dynamic/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/01/FAST-LIO2/: CameraTrajectory.txt  metrics.json  pos_log.txt
results/KITTI/01/ORB_SLAM3/: CameraTrajectory.txt  CameraTrajectory_tum.txt  ExecMean.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/01/ground_truth/: 01_gt_tum.txt
results/KITTI/02/DropD-SLAM/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/02/DropD-SLAM_dynamic/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/02/FAST-LIO2/: CameraTrajectory.txt  metrics.json  pos_log.txt
results/KITTI/02/ORB-SLAM3/: CameraTrajectory.txt  CameraTrajectory_tum.txt  ExecMean.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/02/ground_truth/: 02_gt_tum.txt
results/KITTI/03/DropD-SLAM/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/03/DropD-SLAM_dynamic/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/03/ORB-SLAM3/: CameraTrajectory.txt  CameraTrajectory_tum.txt  ExecMean.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/03/ground_truth/: 03_gt_tum.txt
results/KITTI/04/DropD-SLAM/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/04/DropD-SLAM_dynamic/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/04/FAST-LIO2/: CameraTrajectory.txt  metrics.json  pos_log.txt
results/KITTI/04/ORB-SLAM3/: CameraTrajectory.txt  CameraTrajectory_tum.txt  ExecMean.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/04/ground_truth/: 04_gt_tum.txt
results/KITTI/05/DropD-SLAM/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/05/DropD-SLAM_dynamic/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/05/FAST-LIO2/: CameraTrajectory.txt  metrics.json  pos_log.txt
results/KITTI/05/ORB-SLAM3/: CameraTrajectory.txt  CameraTrajectory_tum.txt  ExecMean.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/05/ground_truth/: 05_gt_tum.txt
results/KITTI/06/DropD-SLAM/: CameraTrajectory.txt  ExecMean.txt  KeyFrameTrajectory.txt  LBA_Stats.txt  LocalMapTimeStats.txt  SessionInfo.txt  TrackingTimeStats.txt  metrics.json
results/KITTI/06/FAST-LIO2/: metrics.json  (+2 more)
scripts/: evaluate.py
(+177 files in other folders)
